--- a/index.html
+++ b/index.html
@@ -19,11 +19,19 @@
 
     <div class="contenedor">
 
-        <img src="dog1.jpg" alt="Imagen de un carlino">
+        <figure>
+            <img src="dog1.jpg" alt="Imagen de un carlino">
+            <figcaption>Fig.1 - Carlino haciendo deporte</figcaption>
+        </figure>
+        <figure>
+            <img src="dog2.jpg" alt="Imagen de un carlino">
+            <figcaption>Fig.2 - Carlino de fiesta</figcaption>
+        </figure>
 
-        <img src="dog2.jpg" alt="Imagen de un carlino">
-
-        <img src="dog3.jpg" alt="Imagen de un carlino">
+        <figure>
+            <img src="dog3.jpg" alt="Imagen de un carlino">
+            <figcaption>Fig.3 - Carlino comestible</figcaption>
+        </figure>
 
     </div>
 
