--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="fotosPug.css">
+    <link rel="stylesheet" href="estilos17-05.css">
     <title>Ejercicio prof-Carlos</title>
 
 </head>
@@ -17,21 +17,43 @@
     </header>
     <hr>
 
-    <div class="contenedor">
+    <!-- contenido principal-->
 
-        <figure>
-            <img src="dog1.jpg" alt="Imagen de un carlino">
-            <figcaption>Fig.1 - Carlino haciendo deporte</figcaption>
-        </figure>
-        <figure>
-            <img src="dog2.jpg" alt="Imagen de un carlino">
-            <figcaption>Fig.2 - Carlino de fiesta</figcaption>
-        </figure>
+    <div class="contenido">
 
-        <figure>
-            <img src="dog3.jpg" alt="Imagen de un carlino">
-            <figcaption>Fig.3 - Carlino comestible</figcaption>
-        </figure>
+        <!-- contenedor lateral -->
+
+        <div class="sidebar">
+            <details>
+                <summary>Menu</summary>
+                <p><a href="14-05-2021.html">Ejercicio 14/05 </a> </p>
+                <p><a href="">Tarea</a> </p>
+                <p><a href="">Tarea</a> </p>
+                <p><a href="">Tarea</a> </p>
+
+            </details>
+
+        </div>
+
+        <!-- contenedor de imágenes -->
+
+        <div class="contenedor">
+
+            <figure>
+                <img src="dog1.jpg" alt="Imagen de un carlino">
+                <figcaption>Fig.1 - Carlino haciendo deporte</figcaption>
+            </figure>
+            <figure>
+                <img src="dog2.jpg" alt="Imagen de un carlino">
+                <figcaption>Fig.2 - Carlino de fiesta</figcaption>
+            </figure>
+
+            <figure>
+                <img src="dog3.jpg" alt="Imagen de un carlino">
+                <figcaption>Fig.3 - Carlino comestible</figcaption>
+            </figure>
+
+        </div>
 
     </div>
 
