--- a/index.html
+++ b/index.html
@@ -6,16 +6,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="estilos17-05.css">
-    <title>Ejercicio prof-Carlos</title>
+    <title>Ejercicios prof-Carlos</title>
 
 </head>
 
 <body>
     <header>
-        <h1>Imágenes bonitas</h1>
-        <h2>Carlino/Pug</h2>
+        <h1>Menú Ejercicios</h1>
+
     </header>
-    <hr>
+
 
     <!-- contenido principal-->
 
@@ -26,36 +26,27 @@
         <div class="sidebar">
             <details>
                 <summary>Menu</summary>
-                <p><a href="14-05-2021.html">Ejercicio 14/05 </a> </p>
-                <p><a href="">Tarea</a> </p>
-                <p><a href="">Tarea</a> </p>
-                <p><a href="">Tarea</a> </p>
+                <a href="14-05-2021.html">
+                    <p>Ejercicio 14/05</p>
+                </a>
+                <a href="">
+                    <p>Futuro Ejercicio</p>
+                </a>
+                <a href="">
+                    <p>Futuro Ejercicio</p>
+                </a>
+                <a href="">
+                    <p>Futuro Ejercicio</p>
+                </a>
 
             </details>
 
         </div>
 
-        <!-- contenedor de imágenes -->
 
-        <div class="contenedor">
-
-            <figure>
-                <img src="dog1.jpg" alt="Imagen de un carlino">
-                <figcaption>Fig.1 - Carlino haciendo deporte</figcaption>
-            </figure>
-            <figure>
-                <img src="dog2.jpg" alt="Imagen de un carlino">
-                <figcaption>Fig.2 - Carlino de fiesta</figcaption>
-            </figure>
-
-            <figure>
-                <img src="dog3.jpg" alt="Imagen de un carlino">
-                <figcaption>Fig.3 - Carlino comestible</figcaption>
-            </figure>
-
-        </div>
 
     </div>
+    <div class="footer">2021 Miguel A. Sánchez </div>
 
 
 
