--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
             <details>
                 <summary>Menu</summary>
                 <a href="14-05-2021.html">
-                    <p>Ejercicio 14/05</p>
+                    <p>Fotos 14/05</p>
                 </a>
-                <a href="">
-                    <p>Futuro Ejercicio</p>
+                <a href="17-05-2021.html">
+                    <p>Menu 17/05</p>
                 </a>
                 <a href="">
                     <p>Futuro Ejercicio</p>
