--- a/17-05-2021.html
+++ b/17-05-2021.html
@@ -17,21 +17,38 @@
     </header>
     <hr>
 
-    <div class="contenedor">
+    <div class="contenido">
+        <!-- Menu lateral-->
+        <div class="sidebar">
+            <ul>
+                <li><a href="">Home</a></li>
+                <li><a href="">Galería</a></li>
+                <li><a href="">Blog</a></li>
+                <li><a href="">Contacto</a></li>
 
-        <figure>
-            <img src="dog1.jpg" alt="Imagen de un carlino">
-            <figcaption>Fig.1 - Carlino haciendo deporte</figcaption>
-        </figure>
-        <figure>
-            <img src="dog2.jpg" alt="Imagen de un carlino">
-            <figcaption>Fig.2 - Carlino de fiesta</figcaption>
-        </figure>
 
-        <figure>
-            <img src="dog3.jpg" alt="Imagen de un carlino">
-            <figcaption>Fig.3 - Carlino comestible</figcaption>
-        </figure>
+            </ul>
+
+
+        </div>
+
+        <div class="contenedor">
+
+            <figure>
+                <img src="dog1.jpg" alt="Imagen de un carlino">
+                <figcaption>Fig.1 - Carlino haciendo deporte</figcaption>
+            </figure>
+            <figure>
+                <img src="dog2.jpg" alt="Imagen de un carlino">
+                <figcaption>Fig.2 - Carlino de fiesta</figcaption>
+            </figure>
+
+            <figure>
+                <img src="dog3.jpg" alt="Imagen de un carlino">
+                <figcaption>Fig.3 - Carlino comestible</figcaption>
+            </figure>
+
+        </div>
 
     </div>
 
