--- a/17-05-2021.html
+++ b/17-05-2021.html
@@ -16,21 +16,33 @@
         <h2>Carlino/Pug</h2>
     </header>
 
+    <div class="topbar">
+        <ul>
+            <li><a href="">HOME</a></li>
+            <li><a href="">GALERIA</a></li>
+            <li><a href="">BLOG</a></li>
+            <li><a href="">CONTACTO</a></li>
+
+
+        </ul>
+
+    </div>
+
 
     <div class="contenido">
-        <!-- Menu lateral-->
+        <!-- Menu lateral
         <div class="sidebar">
             <ul>
-                <li><a href="">Home</a></li>
-                <li><a href="">Galería</a></li>
-                <li><a href="">Blog</a></li>
-                <li><a href="">Contacto</a></li>
+                <li><a href="">HOME</a></li>
+                <li><a href="">GALERIA</a></li>
+                <li><a href="">BLOG</a></li>
+                <li><a href="">CONTACTO</a></li>
 
 
             </ul>
 
 
-        </div>
+        </div> -->
 
         <div class="contenedor">
 
@@ -48,6 +60,8 @@
                 <figcaption>Fig.3 - Carlino comestible</figcaption>
             </figure>
 
+
+
         </div>
 
     </div>
@@ -61,3 +75,6 @@
 </body>
 
 </html>
+
+Para fin del día haremos una página basada en la del viernes (una copia nueva sobre la cual avanzar). Le añadimos sobre las imágenes un menú horizontal, y de bajo de las imágenes un párrafo con título. Las imágenes estarán en la misma línea ocupando todo
+el espacio, de forma responsive, usando box-sizing:border-box (los espacios entre ellas con padding y no con margin). Y sobre los elementos de menú, párrafo y fotos haremos efectos con los pseudoelementos.
