--- a/17-05-2021.html
+++ b/17-05-2021.html
@@ -76,5 +76,5 @@
 
 </html>
 
-Para fin del día haremos una página basada en la del viernes (una copia nueva sobre la cual avanzar). Le añadimos sobre las imágenes un menú horizontal, y de bajo de las imágenes un párrafo con título. Las imágenes estarán en la misma línea ocupando todo
-el espacio, de forma responsive, usando box-sizing:border-box (los espacios entre ellas con padding y no con margin). Y sobre los elementos de menú, párrafo y fotos haremos efectos con los pseudoelementos.
+<!-- Para fin del día haremos una página basada en la del viernes (una copia nueva sobre la cual avanzar). Le añadimos sobre las imágenes un menú horizontal, y de bajo de las imágenes un párrafo con título. Las imágenes estarán en la misma línea ocupando todo
+el espacio, de forma responsive, usando box-sizing:border-box (los espacios entre ellas con padding y no con margin). Y sobre los elementos de menú, párrafo y fotos haremos efectos con los pseudoelementos. -->
