--- a/17-05-2021.html
+++ b/17-05-2021.html
@@ -44,7 +44,9 @@
 
         </div> -->
 
-        <div class="contenedor">
+
+
+        <div class="imagenes">
 
             <figure>
                 <img src="dog1.jpg" alt="Imagen de un carlino">
@@ -59,10 +61,20 @@
                 <img src="dog3.jpg" alt="Imagen de un carlino">
                 <figcaption>Fig.3 - Carlino comestible</figcaption>
             </figure>
-
-
+            <div class="test"></div>
 
         </div>
+
+        <div class="parrafo">
+            <h3> Cualidades del carlino</h5>
+                <p> El carlino es un perro muy payaso, que hace sonreír a los humanos, no solo por sus extrañas facciones con profundas arrugas, hocico chato y grandes ojos negros, sino también por su excepcional sentido del humor. Cada día descubre nuevas
+                    tonterías con las que hacer reír a su cuidador. El perro pug es muy juguetón y, a pesar de sus cortas piernas, es muy dinámico. Aunque no lo parezca, en las carreras de obstáculos, los juegos de habilidad o incluso como acompañante
+                    en cortas excursiones en bici, esta raza de perros se muestra alegre, divertida y relajada. Al mismo tiempo es un can muy digno que disfruta mucho de la tranquilidad. Le encanta dormir mucho y roncar en la cama, el sofá o sobre el
+                    regazo de su humano, pero no es un perrito faldero.</p>
+        </div>
+
+
+
 
     </div>
 
