--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
                 <a href="17-05-2021.html">
                     <p>Menu 17/05</p>
                 </a>
-                <a href="">
-                    <p>Futuro Ejercicio</p>
+                <a href="efectoFoto.html">
+                    <p>Transparencia y posicionamientos</p>
                 </a>
                 <a href="">
                     <p>Futuro Ejercicio</p>
