--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
                     <p>Menu 17/05</p>
                 </a>
                 <a href="efectoFoto.html">
-                    <p>Transparencia y posicionamientos</p>
+                    <p>20/05 Transparencia y posicionamientos</p>
                 </a>
                 <a href="">
-                    <p>Futuro Ejercicio</p>
+                    <p>21/05 Por hacer</p>
                 </a>
 
             </details>
