--- a/efectoFoto.html
+++ b/efectoFoto.html
@@ -40,16 +40,17 @@
         }
         
         .contenedorImg p {
-            background-color: rgba(8, 162, 189, 0.5);
             color: white;
             font-weight: bold;
-            margin: 0;
-            height: 80px;
+            position: relative;
+            top: 30px;
         }
         
         .footer {
             position: relative;
-            bottom: 80px;
+            bottom: 96px;
+            height: 80px;
+            background-color: rgba(8, 162, 189, 0.5);
         }
     </style>
 </head>
