--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <a href="17-05-2021.html">
                     <p>Menu 17/05</p>
                 </a>
-                <a href="efectoFoto.html">
+                <a href="20-05-2021.html">
                     <p>20/05 Transparencia y posicionamientos</p>
                 </a>
                 <a href="">
