--- a/20-05-2021.html
+++ b/20-05-2021.html
@@ -50,7 +50,9 @@
 
             <figure>
                 <img src="dog1.jpg" alt="Imagen de un carlino">
-                <figcaption>Fig.1 - Carlino haciendo deporte</figcaption>
+                <figcaption>
+                    <p> Fig.1 - Carlino haciendo deporte</p>
+                </figcaption>
             </figure>
             <figure>
                 <img src="dog2.jpg" alt="Imagen de un carlino">
