--- a/20-05-2021.html
+++ b/20-05-2021.html
@@ -51,17 +51,21 @@
             <figure>
                 <img src="dog1.jpg" alt="Imagen de un carlino">
                 <figcaption>
-                    <p> Fig.1 - Carlino haciendo deporte</p>
+                    <p>Fig.1 - Carlino haciendo deporte</p>
                 </figcaption>
             </figure>
             <figure>
                 <img src="dog2.jpg" alt="Imagen de un carlino">
-                <figcaption>Fig.2 - Carlino de fiesta</figcaption>
+                <figcaption>
+                    <p>Fig.2 - Carlino de fiesta</p>
+                </figcaption>
             </figure>
 
             <figure>
                 <img src="dog3.jpg" alt="Imagen de un carlino">
-                <figcaption>Fig.3 - Carlino comestible</figcaption>
+                <figcaption>
+                    <p>Fig.3 - Carlino comestible</p>
+                </figcaption>
             </figure>
             <!-- <div class="test"></div> -->
 
