--- a/20-05-2021.html
+++ b/20-05-2021.html
@@ -49,20 +49,20 @@
         <div class="imagenes">
 
             <figure>
-                <img src="dog1.jpg" alt="Imagen de un carlino">
+                <img src="dog1.jpg" alt="Imagen de un carlino corriendo">
                 <figcaption>
                     <p>Fig.1 - Carlino haciendo deporte</p>
                 </figcaption>
             </figure>
             <figure>
-                <img src="dog2.jpg" alt="Imagen de un carlino">
+                <img src="dog2.jpg" alt="Imagen de un carlino con un gorrete">
                 <figcaption>
                     <p>Fig.2 - Carlino de fiesta</p>
                 </figcaption>
             </figure>
 
             <figure>
-                <img src="dog3.jpg" alt="Imagen de un carlino">
+                <img src="dog3.jpg" alt="Imagen de un carlino para comérselo">
                 <figcaption>
                     <p>Fig.3 - Carlino comestible</p>
                 </figcaption>
