--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
@@ -35,7 +35,7 @@
                 <a href="20-05-2021.html">
                     <p>20/05 Transparencia y posicionamientos</p>
                 </a>
-                <a href="">
+                <a href="21-05-2021.html">
                     <p>21/05 Por hacer</p>
                 </a>
 
