Ordenado de todos los archivos
Creacion y orden de todos los archivos del proyecto

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="estilos17-05.css">
+    <link rel="stylesheet" href="./assets/css/estilos17-05.css">
     <title>Ejercicios prof-Carlos</title>
 
 </head>
@@ -26,16 +26,16 @@
         <div class="sidebar">
             <details>
                 <summary>Menu</summary>
-                <a href="14-05-2021.html">
+                <a href="./pages/14-05-2021.html">
                     <p>Fotos 14/05</p>
                 </a>
-                <a href="17-05-2021.html">
+                <a href="./pages/17-05-2021.html">
                     <p>Menu 17/05</p>
                 </a>
-                <a href="20-05-2021.html">
+                <a href="./pages/20-05-2021.html">
                     <p>20/05 Transparencia y posicionamientos</p>
                 </a>
-                <a href="21-05-2021.html">
+                <a href="./pages/21-05-2021.html">
                     <p>21/05 Por hacer</p>
                 </a>
 
