--- a/pages/20-05-2021.html
+++ b/pages/20-05-2021.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="20-05-2021.css">
+    <link rel="stylesheet" href="../assets/css/20-05-2021.css">
     <title>Ejercicio prof-Carlos</title>
 
 </head>
@@ -49,20 +49,20 @@
         <div class="imagenes">
 
             <figure>
-                <img src="dog1.jpg" alt="Imagen de un carlino corriendo">
+                <img src="../assets/images/dog1.jpg" alt="Imagen de un carlino corriendo">
                 <figcaption>
                     <p>Fig.1 - Carlino haciendo deporte</p>
                 </figcaption>
             </figure>
             <figure>
-                <img src="dog2.jpg" alt="Imagen de un carlino con un gorrete">
+                <img src="../assets/images/dog2.jpg" alt="Imagen de un carlino con un gorrete">
                 <figcaption>
                     <p>Fig.2 - Carlino de fiesta</p>
                 </figcaption>
             </figure>
 
             <figure>
-                <img src="dog3.jpg" alt="Imagen de un carlino para comérselo">
+                <img src="../assets/images/dog3.jpg" alt="Imagen de un carlino para comérselo">
                 <figcaption>
                     <p>Fig.3 - Carlino comestible</p>
                 </figcaption>
