--- a/pages/17-05-2021.html
+++ b/pages/17-05-2021.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="17-05-2021.css">
+    <link rel="stylesheet" href="../assets/css/17-05-2021.css">
     <title>Ejercicio prof-Carlos</title>
 
 </head>
@@ -49,16 +49,16 @@
         <div class="imagenes">
 
             <figure>
-                <img src="dog1.jpg" alt="Imagen de un carlino">
+                <img src="../assets/images/dog1.jpg" alt="Imagen de un carlino">
                 <figcaption>Fig.1 - Carlino haciendo deporte</figcaption>
             </figure>
             <figure>
-                <img src="dog2.jpg" alt="Imagen de un carlino">
+                <img src="../assets/images/dog2.jpg" alt="Imagen de un carlino">
                 <figcaption>Fig.2 - Carlino de fiesta</figcaption>
             </figure>
 
             <figure>
-                <img src="dog3.jpg" alt="Imagen de un carlino">
+                <img src="../assets/images/dog3.jpg" alt="Imagen de un carlino">
                 <figcaption>Fig.3 - Carlino comestible</figcaption>
             </figure>
             <div class="test"></div>
