--- a/pages/21-05-2021.html
+++ b/pages/21-05-2021.html
@@ -54,7 +54,15 @@ fecha: Marzo 2021
                 <h2>Carlino/Pug</h2>
             </div>
         </div>
-        <div class="migas"><a href="../index.html">Index</a>/<a href="#">Grid de fotos</a> <button value="noche" id="boton">Noche</button></div>
+        <div class="topbar">
+            <ul>
+                <li><a href="">HOME</a></li>
+                <li><a href="">GALERIA</a></li>
+                <li><a href="">BLOG</a></li>
+                <li><a href="">CONTACTO</a></li>
+
+
+            </ul><button value="noche" id="boton">Noche</button></div>
 
         <div class="contenido">
 
@@ -79,7 +87,9 @@ fecha: Marzo 2021
 
 
         </div>
-        <div class="pie">Pie de página</div>
+        <div class="footer">
+            2021 Miguel A. Sanchez Miranda
+        </div>
     </div>
 
     <script>
