cambios de iconos

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <p>20/05 Transparencia y posicionamientos</p>
                 </a>
                 <a href="./pages/21-05-2021.html">
-                    <p>21/05 Por hacer</p>
+                    <p>21/05 Grid y Jquery</p>
                 </a>
 
             </details>
