--- a/pages/21-05-2021.html
+++ b/pages/21-05-2021.html
@@ -1,32 +1,24 @@
 <!DOCTYPE html>
 <html lang="es">
 
-<!--
-HTML
-web o pagina:
-autor: Carlos Boni
-fecha: Marzo 2021
--->
 
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <!-- importante SEO para la etiqueta del navegador -->
-    <title>Titulo en Etiqueta del Navegador</title>
+    <title>Pugs</title>
 
     <!-- una fuente de Google -->
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200&display=swap" rel="stylesheet" />
 
-    <!-- una hoja de estilos externa-->
-
     <!-- una hoja de estilos personalizada-->
     <link href="../assets/css/21-05-2021.css" rel="stylesheet" />
 
     <!-- iconos u otros elementos externos -->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer"
+    />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.js" integrity="sha512-n/4gHW3atM3QqRcbCn6ewmpxcLAHGaDjpEBu4xZd47N0W2oQ+6q7oc3PXstrJYXcbNU1OHdQ1T7pAP+gi5Yu8g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
     <!-- solo aquellos estilos que solo aplican a esta pagina -->
@@ -53,6 +45,7 @@ fecha: Marzo 2021
                 <h1>Imágenes bonitas</h1>
                 <h2>Carlino/Pug</h2>
             </div>
+            <button value="noche" id="boton"><i class="fas fa-moon"></i></button>
         </div>
         <div class="topbar">
             <ul>
@@ -62,7 +55,8 @@ fecha: Marzo 2021
                 <li><a href="">CONTACTO</a></li>
 
 
-            </ul><button value="noche" id="boton">Noche</button></div>
+            </ul>
+        </div>
 
         <div class="contenido">
 
@@ -113,15 +107,15 @@ fecha: Marzo 2021
 
                 $("body").toggleClass("noche");
 
-                if ($("button").html() == 'Noche') {
+                if ($("button").html() == '<i class="fas fa-moon"></i>') {
 
 
 
-                    $("button").html('Dia');
+                    $("button").html('<i class="fas fa-sun"></i>');
                 } else {
 
 
-                    $("button").html('Noche');
+                    $("button").html('<i class="fas fa-moon"></i>');
 
                 }
 
