Arreglos del día
Usamos less en el ejercicio del día 21.

--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
                 <a href="./pages/21-05-2021.html">
                     <p>21/05 Grid y Jquery</p>
                 </a>
+                <a href="./pages/24-05-2021.html">
+                    <p>24/05</p>
+                </a>
 
             </details>
 
