--- a/index.html
+++ b/index.html
@@ -39,7 +39,10 @@
                     <p>21/05 Grid y Jquery</p>
                 </a>
                 <a href="./pages/24-05-2021.html">
-                    <p>24/05</p>
+                    <p>24/05 uso de Less</p>
+                </a>
+                <a href="./pages/24-05-2021b.html">
+                    <p>24/05 uso de BootStrap</p>
                 </a>
 
             </details>
