--- a/pages/24-05-2021b.html
+++ b/pages/24-05-2021b.html
@@ -78,6 +78,27 @@
                                 <p>Carlino comestible</p>
                             </div>
                         </div>
+                        <div class="carousel-item active">
+                            <img src="../assets/images/pug4.jpg" class="d-block w-30" alt="Foto de Carlino">
+                            <div class="carousel-caption d-none d-md-block">
+
+                                <p>Carlino</p>
+                            </div>
+                        </div>
+                        <div class="carousel-item active">
+                            <img src="../assets/images/pug5.jpg" class="d-block w-30" alt="Foto de Carlino">
+                            <div class="carousel-caption d-none d-md-block">
+
+                                <p>Carlino</p>
+                            </div>
+                        </div>
+                        <div class="carousel-item active">
+                            <img src="../assets/images/pug6.jpg" class="d-block w-30" alt="Foto de Carlino">
+                            <div class="carousel-caption d-none d-md-block">
+
+                                <p>Carlino</p>
+                            </div>
+                        </div>
                     </div>
                     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
                         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
