--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
             <details>
                 <summary>Menu</summary>
                 <a href="./pages/14-05-2021.html">
-                    <p>Fotos 14/05</p>
+                    <p>14/05 Fotos</p>
                 </a>
                 <a href="./pages/17-05-2021.html">
-                    <p>Menu 17/05</p>
+                    <p>17/05 Menú</p>
                 </a>
                 <a href="./pages/20-05-2021.html">
                     <p>20/05 Transparencia y posicionamientos</p>
@@ -39,10 +39,10 @@
                     <p>21/05 Grid y Jquery</p>
                 </a>
                 <a href="./pages/24-05-2021.html">
-                    <p>24/05 uso de Less</p>
+                    <p>24/05 Uso de Less</p>
                 </a>
                 <a href="./pages/24-05-2021b.html">
-                    <p>24/05 uso de BootStrap</p>
+                    <p>24/05 Uso de BootStrap</p>
                 </a>
 
             </details>
