--- a/pages/24-05-2021b.html
+++ b/pages/24-05-2021b.html
@@ -55,6 +55,9 @@
                         <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
                         <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
                         <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3" aria-label="Slide 4"></button>
+                        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="4" aria-label="Slide 5"></button>
+                        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="5" aria-label="Slide 6"></button>
                     </div>
                     <div class="carousel-inner">
                         <div class="carousel-item active">
@@ -78,27 +81,28 @@
                                 <p>Carlino comestible</p>
                             </div>
                         </div>
-                        <div class="carousel-item active">
+                        <div class="carousel-item">
                             <img src="../assets/images/pug4.jpg" class="d-block w-30" alt="Foto de Carlino">
                             <div class="carousel-caption d-none d-md-block">
 
                                 <p>Carlino</p>
                             </div>
                         </div>
-                        <div class="carousel-item active">
+                        <div class="carousel-item">
                             <img src="../assets/images/pug5.jpg" class="d-block w-30" alt="Foto de Carlino">
                             <div class="carousel-caption d-none d-md-block">
 
                                 <p>Carlino</p>
                             </div>
                         </div>
-                        <div class="carousel-item active">
+                        <div class="carousel-item">
                             <img src="../assets/images/pug6.jpg" class="d-block w-30" alt="Foto de Carlino">
                             <div class="carousel-caption d-none d-md-block">
 
                                 <p>Carlino</p>
                             </div>
                         </div>
+
                     </div>
                     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
                         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
