--- a/pages/24-05-2021b.html
+++ b/pages/24-05-2021b.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
@@ -37,7 +37,7 @@
             </div>
         </div>
 
-        <div class="row">
+        <div class="row mt-5">
             <div class="col-2">
                 <div class="list-group">
                     <button type="button" class="list-group-item list-group-item-action btn-primary" aria-current="true">
@@ -132,7 +132,7 @@
         </div>
         <div class="row">
             <div class="col text-center text-light">
-                2021 Miguel A. Sanchez Miranda
+                2021 Miguel A. Sánchez Miranda
             </div>
         </div>
 
