--- a/ejerciciosJs/ifTernario.html
+++ b/ejerciciosJs/ifTernario.html
@@ -5,21 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ejercicios para el profesor Carlos Boni</title>
+    <title>If y Ternario</title>
     <script src="./ejercicios.js"></script>
 </head>
 
-<body>
-
-
-    <h2>Ejercicios del 27 con javascript</h2>
-
-    <a href="">If/If else</a>
-
-    <a href="ifTernario.html">If y ternario</a>
-
-    <a href="">Ver datos de pantalla</a>
-
+<body onload="ejercicioIF()">
 
 
 
