--- a/ejerciciosJs/ejercicio1.html
+++ b/ejerciciosJs/ejercicio1.html
@@ -5,11 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>If y Ternario</title>
+    <title>Ejercicio Javascript</title>
     <script src="./ejercicios.js"></script>
 </head>
 
-<body onload="ejercicioIf()">
+<body onload="ejercicioIf1()">
 
 </body>
 
