--- a/ejerciciosJs/index.html
+++ b/ejerciciosJs/index.html
@@ -14,11 +14,11 @@
 
     <h2>Ejercicios del 27 con javascript</h2>
 
-    <a href="">If/If else</a>
+    <a href="ejercicio1.html">If/If else</a>
 
     <a href="ifTernario.html">If y ternario</a>
 
-    <a href="">Ver datos de pantalla</a>
+    <a href="opcionesPant.html">Ver datos de pantalla</a>
 
 
 
