--- a/ejerciciosJs/28-05-2021.html
+++ b/ejerciciosJs/28-05-2021.html
@@ -19,11 +19,17 @@
     <hr>
     <br>
     <h3>Con Jquery</h3>
-    <button type="button" id="boton" onclick="operaciones2(9,9)">Pulsa</button>
+    <button type="button" id="boton1" onclick="operaciones2(9,9)">Pulsa</button>
     <h3 id="sumaJquery"></h3>
 
-    <h3>Con funcion de flecha</h3>
-    <button type="button" id="boton" onclick="flecha(5,5)">Pulsa</button>
+    <h3>Con función de flecha</h3>
+    <button type="button" id="boton2" onclick="flecha(5,5)">Pulsa</button>
+
+    <h3>Con función con Prompt</h3>
+    <button type="button" id="boton3" onclick="operacionesPrompt()">Pulsa</button>
+    <h3>Resultado: </h3>
+    <h3 id="sumaPrompt"></h3>
+
 
 
 
