cambios del dia 3/06
creada la pagina con el xml propio

--- a/prototypes/31-05-2021.html
+++ b/prototypes/31-05-2021.html
@@ -55,6 +55,7 @@
             <p></p>
         </div>
         <form action="">
+            <label for="">Seleccione usuario para saber su clave</label>
             <input type="text" id="usuario" name="usuario" placeholder="Usuario...">
 
         </form>
