--- a/prototypes/31-05ConImg/31-05conImg.html
+++ b/prototypes/31-05ConImg/31-05conImg.html
@@ -5,7 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="31-05ConImg.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+    <script src="./31-05ConImg.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js" integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT" crossorigin="anonymous"></script>
 
     <style>
         img {
@@ -17,21 +20,33 @@
     <title>Prototypes</title>
 </head>
 
-<body onload="leerXML()">
+<body onload="leerXML()" class="bg-dark text-center text-light m-3">
+    <div class="container text-center">
+        <div class="row">
+            <div class="col">
+                <h1>Coches Feos</h1>
+            </div>
+        </div>
 
-    <div>
+        <div class="row">
+            <div class="col">
+                <div id="contenidoXML"></div>
 
+            </div>
 
-        <button type="button" onclick="mostrar()">Mostrar</button>
-
-        <div id="contenidoXML">
-            <p></p>
         </div>
 
 
 
     </div>
-    <img src="" alt="">
+
+
+
+
+
+
+    <button type="button" class="btn btn-primary" onclick="mostrar()">Mostrar</button>
+
 
 
 
