--- a/prototypes/31-05ConImg/index.html
+++ b/prototypes/31-05ConImg/index.html
@@ -7,17 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <script src="./31-05ConImg.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js" integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT" crossorigin="anonymous"></script>
 
-    <style>
-        img {
-            max-width: 500px;
-            max-height: 500px;
-        }
-    </style>
-
-    <title>Prototypes</title>
+    <title>XML</title>
 </head>
 
 <body onload="leerXML()" class="bg-dark text-center text-light m-3">
@@ -47,6 +38,17 @@
 
     <button type="button" class="btn btn-primary" onclick="mostrar()">Mostrar</button>
 
+    <form action="" class="mt-5">
+        <p class="h4">Buscar la url de los coches</p>
+        <input type="text" id="coche" name="coche" placeholder="Buscar Coche">
+
+    </form><br>
+    <button type="button" onclick="mostrarUrl()">Buscar</button>
+
+
+    <div id="contenido4">
+        <p></p>
+    </div>
 
 
 
