--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
                 <a href="./pages/24-05-2021b.html">
                     <p>24/05 Uso de BootStrap</p>
                 </a>
+                <a href="./prototypes/03-06-2021/index.html">
+                    <p>03/06 XML e Imágenes</p>
+                </a>
 
             </details>
 
