--- a/prototypes/03-06-2021/index.html
+++ b/prototypes/03-06-2021/index.html
@@ -12,16 +12,16 @@
     <title>XML</title>
 </head>
 
-<body onload="leerXML()" class="bg-dark text-center text-light m-3">
+<body onload="leerXML()" class="bg-dark text-center text-light">
     <div class="container text-center">
-        <div class="row">
-            <div class="col">
+        <div class="row ">
+            <div class="col-12 ">
                 <h1>Coches Feos</h1>
             </div>
         </div>
 
         <div class="row">
-            <div class="col ">
+            <div class="col-12 ">
                 <div id="contenidoXML"></div>
 
             </div>
