--- a/prototypes/03-06-2021/index.html
+++ b/prototypes/03-06-2021/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="estilos.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <script src="./03-06-2021.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
 
     <title>XML</title>
 </head>
@@ -30,24 +31,54 @@
 
 
 
-    </div>
 
 
 
 
 
 
-    <button type="button" class="btn btn-primary" onclick="mostrar()">Mostrar</button>
 
-    <form action="" class="mt-5">
-        <p class="h4">Buscar la url de los coches</p>
-        <input type="text" id="coche" name="coche" placeholder="Buscar Coche">
+        <button type="button" class="btn btn-primary" onclick="mostrar()">Mostrar</button>
 
-    </form><br>
-    <button type="button" onclick="mostrarUrl()">Buscar</button>
+        <form action="" class="mt-5">
+            <p class="h4">Buscar la url de los coches</p>
+            <input type="text" id="coche" name="coche" placeholder="Buscar Coche">
+
+        </form><br>
+        <button type="button" onclick="mostrarUrl()">Buscar</button>
 
 
-    <div id="contenido4">
+        <div id="contenido4">
+
+        </div>
+
+        <!-- <div class="row">
+            <div class="col">
+                <h3>Carrusel</p>
+
+                    <button type="button" class="btn btn-primary" onclick="mostrarCar()">Mostrar</button>
+
+
+            </div>
+        </div>
+        <div class="row">
+            <div class="col">
+                <div id='carouselExampleControls' class='carousel slide' data-bs-ride='carousel'>
+                    <div id="carrusel" class='carousel-inner'>
+                        <div class='carousel-item active'>
+                            <img src="./images/coche13.jpg" class="d-block w-100" alt="...">
+
+                        </div>
+
+                         <div id="carrusel" class="carousel-item"></div> 
+
+                    </div>
+
+                </div>
+
+            </div>
+        </div> -->
+
 
     </div>
 
