--- a/prototypes/03-06-2021/index.html
+++ b/prototypes/03-06-2021/index.html
@@ -20,6 +20,12 @@
                 <h1>Coches Feos</h1>
             </div>
         </div>
+        <div class="row">
+            <div class="col">
+                <a href="04-06-2021.html"><button type="button" class="btn btn-warning">FlexBox</button></a>
+                <a href="carrusel.html"><button type="button" class="btn btn-warning">Carrusel</button></a>
+            </div>
+        </div>
 
         <div class="row">
             <div class="col-12 ">
@@ -30,15 +36,7 @@
         </div>
 
 
-
-
-
-
-
-
-
-
-        <button type="button" class="btn btn-primary" onclick="mostrar()">Mostrar</button>
+        <button type="button" class="btn btn-primary mt-4" onclick="mostrar()">Mostrar</button>
 
         <form action="" class="mt-5">
             <p class="h4">Buscar la url de los coches</p>
@@ -52,32 +50,7 @@
 
         </div>
 
-        <!-- <div class="row">
-            <div class="col">
-                <h3>Carrusel</p>
 
-                    <button type="button" class="btn btn-primary" onclick="mostrarCar()">Mostrar</button>
-
-
-            </div>
-        </div>
-        <div class="row">
-            <div class="col">
-                <div id='carouselExampleControls' class='carousel slide' data-bs-ride='carousel'>
-                    <div id="carrusel" class='carousel-inner'>
-                        <div class='carousel-item active'>
-                            <img src="./images/coche13.jpg" class="d-block w-100" alt="...">
-
-                        </div>
-
-                         <div id="carrusel" class="carousel-item"></div> 
-
-                    </div>
-
-                </div>
-
-            </div>
-        </div> -->
 
 
     </div>
