--- a/index.html
+++ b/index.html
@@ -30,19 +30,19 @@
                 <button type="button" class="btn btn-primary text-dark"><a href="./pages/14-05-2021.html">
                     14/05 Fotos
                 </a></button>
-                <button type="button" class="btn btn-primary"><a href="./pages/17-05-2021.html">
+                <button type="button" class="btn btn-secondary"><a href="./pages/17-05-2021.html">
                     17/05 Menú
                 </a></button>
-                <button type="button" class="btn btn-primary"><a href="./pages/20-05-2021.html">
+                <button type="button" class="btn btn-warning"><a href="./pages/20-05-2021.html">
                     20/05 Transparencia y posicionamientos
                 </a></button>
-                <button type="button" class="btn btn-primary"><a href="./pages/21-05-2021.html">
+                <button type="button" class="btn btn-success"><a href="./pages/21-05-2021.html">
                     21/05 Grid y Jquery
                 </a></button>
-                <button type="button" class="btn btn-primary"><a href="./pages/24-05-2021.html">
+                <button type="button" class="btn btn-info"><a href="./pages/24-05-2021.html">
                     24/05 Uso de Less
                 </a></button>
-                <button type="button" class="btn btn-primary"><a href="./pages/24-05-2021b.html">
+                <button type="button" class="btn btn-check"><a href="./pages/24-05-2021b.html">
                     24/05 Uso de BootStrap
                 </a></button>
                 <button type="button" class="btn btn-primary"><a href="./prototypes/03-06-2021/index.html">
