--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 
     <!-- contenido principal-->
 
-    <div class="container d-flex justify-content-evenly">
-
+    <div class="container">
+                <div class="d-flex justify-content-lg-evenly">
                 <button type="button" class="btn btn-primary text-dark"><a href="./pages/14-05-2021.html">
                     14/05 Fotos
                 </a></button>
@@ -48,12 +48,19 @@
                 <button type="button" class="btn btn-primary"><a href="./prototypes/03-06-2021/index.html">
                     03/06 XML e Imágenes
                 </a></button>
+                <button type="button" class="btn btn-warning"><a href="./prototypes/03-06-2021/index.html">
+                    04/06 XML Carrusel
+                </a></button>
+                <button type="button" class="btn btn-success"><a href="./prototypes/03-06-2021/index.html">
+                    04/06 XML FlexBox
+                </a></button>
+            </div>
 
           
 
 
 
-    </div><div class="row text-center">
+    </div><div class="row text-center position-absolute bottom-0 end-50">
         <div class="col">
              2021 Miguel A. Sánchez
         </div>
