--- a/index.html
+++ b/index.html
@@ -48,40 +48,62 @@
                     </a></button>
                 </div>
                 <div class="col-3">
-                    <button type="button" class="btn btn-check"><a href="./pages/24-05-2021b.html">
+                    <button type="button" class="btn btn-light"><a href="./pages/24-05-2021b.html">
                         24/05 Uso de BootStrap
                     </a></button>
                 </div>
                 <div class="col-3">
-                    <button type="button" class="btn btn-primary"><a href="./prototypes/03-06-2021/index.html">
-                        03/06 XML e Imágenes
+                    <button type="button" class="btn btn-primary"><a href="./prototypes/31-05-2021.html">
+                        31/05 XML usuarios
                     </a></button>
                 </div>
                 <div class="col-3">
-                    <button type="button" class="btn btn-warning"><a href="./prototypes/03-06-2021/index.html">
-                        04/06 XML Carrusel
+                    <button type="button" class="btn btn-secondary"><a href="./prototypes/03-06-2021/index.html">
+                        03/06 XML e Imágenes
                     </a></button>
                 </div>
             </div>
             <div class="row m-3">
                 <div class="col">
-                    <button type="button" class="btn btn-danger"><a href="./prototypes/03-06-2021/index.html">
+                    <button type="button" class="btn btn-warning"><a href="./prototypes/03-06-2021/carrusel.html">
+                        04/06 XML Carrusel
+                    </a></button>
+                </div>
+                <div class="col">
+                    <button type="button" class="btn btn-danger"><a href="./prototypes/03-06-2021/04-06-2021.html">
                         04/06 XML FlexBox
                     </a></button>
                 </div>
                 <div class="col">
                     <button type="button" class="btn btn-success"><a href="./prototypes/03-06-2021/index.html">
-                        07/06 XML FlexBox
+                        07/06
                     </a></button>
                 </div>
                 <div class="col">
                     <button type="button" class="btn btn-primary"><a href="./prototypes/03-06-2021/index.html">
-                        10/06 XML FlexBox
+                        10/06
                     </a></button>
                 </div>
-                <div class="col">
+            </div>
+            <div class="row m-3">
+                <div class="col-3">
                     <button type="button" class="btn btn-secondary"><a href="./prototypes/03-06-2021/index.html">
-                        11/06 XML FlexBox
+                        11/06 
+                    </a></button>
+                </div>
+                <div class="col-3">
+                    <button type="button" class="btn btn-secondary"><a href="./prototypes/03-06-2021/index.html">
+                        14/06 
+                    </a></button>
+                </div>
+                <div class="col-3">
+                    <button type="button" class="btn btn-secondary"><a href="./prototypes/03-06-2021/index.html">
+                        17/06 
+                    </a></button>
+                </div>
+                <div class="col-3">
+                    <button type="button" class="btn btn-secondary"><a href="./prototypes/03-06-2021/index.html">
+                        18/06 
                     </a></button>
                 </div>
             </div>
