--- a/pages/31-05-2021.html
+++ b/pages/31-05-2021.html
@@ -5,8 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="31-05-2021.js"></script>
-    <link rel="stylesheet" href="./31-05-2021.css">
+    <script src="../assets/js/31-05-2021.js"></script>
+    <link rel="stylesheet" href="../assets/css/31-05-2021.css">
+
     <title>Prototypes</title>
 </head>
 
